--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
 	"author": "tarol",
 	"license": "MIT",
 	"scripts": {
-    "start": "npm run identifier && npm run detransform",
-    "identifier": "npm run beauty && npm run rst",
+    "start": "npm run rename && npm run detransform",
+    "rename": "npm run beauty && npm run rst",
 		"beauty": "node codemod/beauty.js",
-		"rst": "node codemod/identifier/rst.js",
-		"fn": "node codemod/identifier/fn.js",
-    "args": "node codemod/identifier/args.js",
-    "var": "node codemod/identifier/var.js",
+		"rst": "node codemod/rename/rst.js",
+		"fn": "node codemod/rename/fn.js",
+    "args": "node codemod/rename/args.js",
+    "var": "node codemod/rename/var.js",
     "detransform": "npm run ret",
     "ret": "node codemod/detransform/ret.js"
 	},
